--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "jwt-decode": "^4.0.0",
     "mobx": "^6.12.3",
     "mobx-react-lite": "^4.0.7",
     "normalize.css": "^8.0.1",
